backend/deploy/k8s/processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
# pro processor není service YAML - processor jen konzumuje NATS, nikdo se na něj nepřipojuje
metadata:
  name: processor
  namespace: tracking-system
  labels:
    app: processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor
  template:
    metadata:
      labels:
        app: processor
    spec:
      containers:
        - name: processor
          image: ghcr.io/bojkoj/processor:49de079
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
