backend/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: query-ingress
  namespace: tracking-system
  annotations:
    # Traefik je default ingress controller v k3s
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 8080
